--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,20 @@
-.headline{color:red}
+body {
+  text-align: center;
+  background: url("../img/black-wallpaper-3.jpg");
+  background-size: cover;
+  background-position: center;
+  color: white;
+  font-family: helvetica;
+}
+p {
+  font-size: 22px;
+}
+input {
+  border: 0;
+  padding: 10px;
+  font-size: 18px;
+}
+input[type="submit"] {
+  background: black;
+  color: white;
+}
