--- a/css/style.css
+++ b/css/style.css
@@ -17,4 +17,9 @@ input {
 input[type="submit"] {
   background: black;
   color: white;
+} 
+  footer
+  {
+	  width: 100%;height: 50px;position: absolute;bottom: 0;left: 0;background: #000;border-top: 1px solid #3949A2;
+  
 }
