--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,9 @@
 body {
   text-align: center;
-  background: url("../img/black-wallpaper-3.jpg");
-  background-size: cover;
   background-position: center;
-  color: white;
+  background-image:url(http://thumbs.dreamstime.com/z/fond-fantastique-de-place-de-cirque-de-couleur-46588673.jpg);
   font-family: helvetica;
+  color: white;
 }
 p {
   font-size: 22px;
@@ -19,10 +18,41 @@ input[type="submit"] {
   color: white;
 } 
 footer{
-width: 100%;height: 50px;position: relative;bottom: 0;left: 0;background: #000;border-top: 1px solid #3949A2;
+width: 100%;height: 50px;position: relative;bottom: 0;left: 0;background: white;border-top: 1px solid #3949A2; color: green;
 }
 .banniere2 { 
   margin: 40px 0px 0px 0px;
   border: 7px solid white;
   border-radius: 20px;
+}
+
+.nav { 
+  padding: 10px;
+  width:652px;
+  margin-left:auto;
+  margin-right:auto;
+  margin-bottom: 100px;
+  
+} 
+
+.nav a{
+    width: 163px;
+	height:67px;
+    line-height: 50px;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    vertical-align: middle;
+    color: white;
+    float: left;
+}
+#program{ background: url(../img/boutonhome.jpg) no-repeat;}
+#performances{ background: url(../img/boutonperf.jpg) no-repeat;}
+#dates{ background: url(../img/boutondates.jpg) no-repeat;}
+#prices{ background: url(../img/boutonprice.jpg) no-repeat;}
+
+.article { 
+ clear:both 
+ 
+
 }
